--- a/style.css
+++ b/style.css
@@ -87,6 +87,28 @@ main {
     display: block;
 }
 
+.form-container{
+    position: absolute;
+    right: 50%;
+    top: 50%;
+    transform: translate(50%,-50%);
+    background-color: purple;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+#addBook{
+    display: none;
+}
+
+input{
+    width: 300px;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    border-color: rgba(0,0,0,0.2);
+ }
+
 .dropdown-content a:hover {background-color: #f1f1f1}
 
 .show {display:block;}
